--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -22,6 +22,13 @@ body {
   padding: 0;
   margin: 0;
 }
+* {
+  padding: 0;
+  margin: 0;
+}
+li {
+  list-style-type: none;
+}
 
 #app {
   width: 100%;
